--- a/papers/final/alex/paper.tex
+++ b/papers/final/alex/paper.tex
@@ -364,6 +364,7 @@ combination of validation loss and listening to hand-picked sample
 reconstructions and interpolations.
 
 Data augmentation was also tested--Oore et al (2018)
+
 \cite{oore_this_2018} suggests augmentation via pitch shifting each
 training example up or down by up to six semitones in order to create
 additional training examples and reduce overfitting, so we followed
@@ -394,8 +395,9 @@ suggesting that this method was effective in reducing overfitting.
 
 The reconstructed music produced by the model sounds reminiscent of
 the original inputs, preserving the key signature and general rhythmic
-and melodic structure, albeit with noticeable differences at the
-individual note level.
+and melodic structure, albeit with small but noticeable differences at
+the individual note level, such as more silence and less variation in
+pitch.
 
 A collection of samples of the autoencoded outputs and interpolations,
 converted to mp3 format, is presented at the following URL:
@@ -406,68 +408,75 @@ the string quartet pieces in the MusicNet corpus, numbered 0-4, where
 the second piece, and 1-3 are linear interpolations between the two
 pieces. Each file is cropped to the first 16 measures only.
 
-The interpolations are between the following 18 pairs of pieces
+The interpolations are between the following 18 pairs of pieces:
 
 \begin{itemize}
 \tightlist
-\item \texttt{Haydn/2104\_op64n5\_1.mid} , \texttt{Ravel/2178\_gr\_rqtf2.mid}
-\item \texttt{Haydn/2105\_op64n5\_2.mid} ,   \texttt{Ravel/2179\_gr\_rqtf3.mid}
-\item \texttt{Haydn/2106\_op64n5\_3.mid} ,   \texttt{Ravel/2177\_gr\_rqtf1.mid}
-\item \texttt{Beethoven/2497\_qt11\_4.mid} , \texttt{Mozart/1822\_kv\_421\_1.mid}
-\item \texttt{Beethoven/2433\_qt16\_3.mid} , \texttt{Mozart/1859\_kv\_464\_2.mid}
-\item \texttt{Beethoven/2368\_qt12\_4.mid} , \texttt{Mozart/1807\_kv\_387\_3.mid}
-\item \texttt{Beethoven/2314\_qt15\_2.mid} , \texttt{Mozart/1791\_kv\_465\_4.mid}
-\item \texttt{Beethoven/2480\_qt05\_1.mid} , \texttt{Mozart/1792\_kv\_465\_1.mid}
-\item \texttt{Beethoven/2481\_qt05\_2.mid} , \texttt{Mozart/1835\_kv\_590\_3.mid}
-\item \texttt{Beethoven/2379\_qt08\_4.mid} , \texttt{Mozart/1805\_kv\_387\_1.mid}
-\item \texttt{Beethoven/2365\_qt12\_1.mid} , \texttt{Mozart/1793\_kv\_465\_2.mid}
-\item \texttt{Beethoven/2562\_qt02\_4.mid} , \texttt{Mozart/1790\_kv\_465\_3.mid}
-\item \texttt{Beethoven/2494\_qt11\_1.mid} , \texttt{Mozart/1789\_kv\_465\_2.mid}
-\item \texttt{Beethoven/2403\_qt01\_4.mid} , \texttt{Mozart/1788\_kv\_465\_1.mid}
-\item \texttt{Beethoven/2376\_qt08\_1.mid} , \texttt{Dvorak/1916\_dvq10m1.mid}
-\item \texttt{Beethoven/2384\_qt13\_4.mid} , \texttt{Bach/2242\_vs1\_2.mid}
-\item \texttt{Beethoven/2560\_qt02\_2.mid} , \texttt{Beethoven/2621\_qt07\_1.mid}
-\item \texttt{Beethoven/2377\_qt08\_2.mid} , \texttt{Beethoven/2381\_qt13\_1.mid}
+\item \texttt{Haydn/2104\_op64n5\_1.mid} \& \texttt{Ravel/2178\_gr\_rqtf2.mid}
+\item \texttt{Haydn/2105\_op64n5\_2.mid} \&   \texttt{Ravel/2179\_gr\_rqtf3.mid}
+\item \texttt{Haydn/2106\_op64n5\_3.mid} \&   \texttt{Ravel/2177\_gr\_rqtf1.mid}
+\item \texttt{Beethoven/2497\_qt11\_4.mid} \& \texttt{Mozart/1822\_kv\_421\_1.mid}
+\item \texttt{Beethoven/2433\_qt16\_3.mid} \& \texttt{Mozart/1859\_kv\_464\_2.mid}
+\item \texttt{Beethoven/2368\_qt12\_4.mid} \& \texttt{Mozart/1807\_kv\_387\_3.mid}
+\item \texttt{Beethoven/2314\_qt15\_2.mid} \& \texttt{Mozart/1791\_kv\_465\_4.mid}
+\item \texttt{Beethoven/2480\_qt05\_1.mid} \& \texttt{Mozart/1792\_kv\_465\_1.mid}
+\item \texttt{Beethoven/2481\_qt05\_2.mid} \& \texttt{Mozart/1835\_kv\_590\_3.mid}
+\item \texttt{Beethoven/2379\_qt08\_4.mid} \& \texttt{Mozart/1805\_kv\_387\_1.mid}
+\item \texttt{Beethoven/2365\_qt12\_1.mid} \& \texttt{Mozart/1793\_kv\_465\_2.mid}
+\item \texttt{Beethoven/2562\_qt02\_4.mid} \& \texttt{Mozart/1790\_kv\_465\_3.mid}
+\item \texttt{Beethoven/2494\_qt11\_1.mid} \& \texttt{Mozart/1789\_kv\_465\_2.mid}
+\item \texttt{Beethoven/2403\_qt01\_4.mid} \& \texttt{Mozart/1788\_kv\_465\_1.mid}
+\item \texttt{Beethoven/2376\_qt08\_1.mid} \& \texttt{Dvorak/1916\_dvq10m1.mid}
+\item \texttt{Beethoven/2384\_qt13\_4.mid} \& \texttt{Bach/2242\_vs1\_2.mid}
+\item \texttt{Beethoven/2560\_qt02\_2.mid} \& \texttt{Beethoven/2621\_qt07\_1.mid}
+\item \texttt{Beethoven/2377\_qt08\_2.mid} \& \texttt{Beethoven/2381\_qt13\_1.mid}
 \end{itemize}
 
-\subsection{Model Evaluation}
+\subsection{Generated Sample Evaluation}
 
 Evaluation of generative models is challenging because there is no
-equivalent of an accuracy metric like what is used in supervised
-learning. For autoencoder models we can measure how accurately the
-model can reconstruct its own inputs, but this does not tell us the
-quality of the interpolated examples. Generative models are typically
-evaluated using a combination of qualitative metrics whereby human
-judges rate the quality of the generated examples (essentially a
-Turing test), and quantitative metrics that assess the differences in
-the parametric distributions of generated and real examples. Yang and
-Lerch (2020) proposes a set of metrics informed by music theory, for
+direct equivalent of an accuracy or error metric like what is used in
+supervised learning. For autoencoder models we can measure how
+accurately the model can reconstruct its own inputs, but this does not
+tell us the quality of the interpolated examples. Generative models
+are typically evaluated using a combination of qualitative metrics
+whereby human judges rate the quality of the generated examples and
+guess whether they were generated by a machine (essentially a Turing
+test), and quantitative metrics that assess the differences in the
+parametric distributions of generated and real examples. Yang and
+Lerch (2020) propose a set of metrics informed by music theory, for
 probabilistically evaluating how similar the generations are to known
 sample distributions of real music \cite{yang_evaluation_2020}. These
 metrics include counts, ranges, histograms and transition matrices of
 pitches and note lengths, then the Kullback-Leibler divergence and
-overlapping area of the probability density functions are used to
-compare against known reference distributions per musical genre
-\cite{yang_evaluation_2020}. Due to the cost and time requirements
-associated with designing a human subjects experiment, we
-utilize this quantitative approach to the quality assessment of
-generated samples.
+overlapping area of the probability density or mass functions are
+used to compare against known reference distributions per musical
+genre \cite{yang_evaluation_2020}. Due to the cost and time
+requirements associated with designing a human subjects experiment for
+qualitative evaluation, we utilize this quantitative approach to the
+assessment of generated samples.
+
+Figure \ref{pitch_counts} depicts histograms of source and generated
+music samples respectively (1 sample = 1 measure) by the number of
+distinct pitch counts they contain. In both samples the mode is 9
+distinct pitches, but the source arrangements have a median of 11
+while the generations have a median of 8. This supports our own
+qualitative observation that the generated samples have slightly less
+pitch diversity than the genuine compositions.
 
 \begin{figure}[htbp]
     \begin{center}
-        \scalebox{0.6}{\input{figures/source_pitch_count.pgf}}
+        \scalebox{0.6}{\input{figures/pitch_count_histogram.pgf}}
     \end{center}
-    \caption{Distinct pitch counts per sample for source samples.}
-    \label{source_pitches}
+    \caption{Distinct pitch counts per sample for generated and source samples.}
+    \label{pitch_counts}
 \end{figure}
 
-\begin{figure}[htbp]
-    \begin{center}
-        \scalebox{0.6}{\input{figures/generated_pitch_count.pgf}}
-    \end{center}
-    \caption{Distinct pitch counts per sample for generated samples.}
-    \label{generated_pitches}
-\end{figure}
+Figure \ref{pch} depicts the source and generated samples' proportion
+of notes by each of the 12 notes in the chromatic scale, regardless of
+octave, where 0 = C, 1 = C$\sharp$/D$\flat$, 2 = D, and so on. These
+distributions are very similar, with the generated samples having more
+Cs and fewer Ds than the source samples.
 
 \begin{figure}[htbp]
     \begin{center}
